src-tauri/src/backlink/snapshots/agaric_lib__backlink__tests__snapshot_backlink_query_basic.snap
---
source: src/backlink/tests.rs
expression: resp
---
items:
  - id: "[ULID]"
    block_type: content
    content: Source A
    parent_id: ~
    position: ~
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: ~
  - id: "[ULID]"
    block_type: content
    content: Source B
    parent_id: ~
    position: ~
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: ~
  - id: "[ULID]"
    block_type: content
    content: Source C
    parent_id: ~
    position: ~
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: ~
next_cursor: "[CURSOR]"
has_more: false
total_count: 3
filtered_count: 3
