src-tauri/src/backlink/snapshots/agaric_lib__backlink__tests__snapshot_backlink_query_empty.snap
---
source: src/backlink/tests.rs
assertion_line: 2056
expression: resp
---
items: []
next_cursor: "[CURSOR]"
has_more: false
total_count: 0
filtered_count: 0
